--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transform": {
+      "^.+\\.(ts|tsx)?$": "ts-jest",
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "^~(.*)$": "<rootDir>/src$1"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -53,10 +62,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
     "@craco/craco": "^7.1.0",
     "@craco/types": "^7.1.0",
+    "babel-jest": "^29.7.0",
     "browserslist": "^4.23.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
-    "lightningcss": "^1.24.1"
+    "jest": "^29.7.0",
+    "lightningcss": "^1.24.1",
+    "msw": "^2.2.14",
+    "ts-jest": "^29.1.2"
   }
 }
