--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formkit/tempo": "^0.1.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@tanstack/react-query": "^5.32.0",
@@ -15,7 +16,6 @@
     "@types/react-dom": "^18.2.25",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
     "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.1",
